# agent-smell-degradation-harness

./: .gitignore  CHANGELOG.md  CITATION.cff  Makefile  README.md  pyproject.toml
agent_harness/: types.py
agents/: live.py  mock_transport.py  policies.py  stub.py
baselines/: __init__.py  compare.py  features.py  score.py
docs/: interop.md  wedge.md
eval/: __main__.py  analysis_report.py  dissertation_bundle.py  experiment.py  h2_detection.py  manifest.py  metrics.py  mitigation_report.py  mutation.py  oracles.py  runner.py  simulate_regressions.py  thesis_analysis.py  thresholds.yaml
gates/: __main__.py  run.py
mitigation/: __init__.py  clarify.py  detect.py  pipeline.py  rewrite.py  templates.py  tradeoff.py
observability/: features.py  tracing.py
pairs/: loader.py  schema.py  validate.py
protocol/: __init__.py  irr.py  packaging.py  paired_stats.py  reliability.py
taxonomy/: __init__.py  catalog.py  label.py
tests/: test_acceptance.py  test_analysis_gates.py  test_baselines.py  test_eval_runner.py  test_experiment.py  test_experiment_preflight.py  test_gate.py  test_h2_detection.py  test_irr.py  test_live_agent.py  test_live_agent_offline_guard.py  test_mitigation_clarify.py  test_mitigation_detect.py  test_mitigation_pipeline.py  test_mitigation_rewrite.py  test_mitigation_tradeoff.py  test_mutation.py  test_oracles.py  test_oracles_tolerant.py  test_pair_schema.py  test_paired_stats.py  test_pairs.py  test_pre_experiment_acceptance.py  test_protocol_packaging.py  test_provenance.py  test_rf11.py  test_runner_taxonomy.py  test_simulate.py  (+9 more)
(+24 files in other folders)
