[project]
name = "agent-smell-degradation-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
live = []  # Tier 2

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
  "agent_harness*",
  "pairs*",
  "agents*",
  "observability*",
  "eval*",
  "gates*",
  "taxonomy*",
  "protocol*",
  "baselines*",
  "mitigation*",
]
